Reduced whitespace and fixed formatting for contact info

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body{
 .hero{
   text-align: center;
   vertical-align: middle;
-  height: 55vh;
+  height: 40vh;
 }
 .hero h1{
   font-family: 'Open Sans', sans-serif;
@@ -156,9 +156,7 @@ body{
   font-size: 14pt;
 }
 
-.contact{
-  padding: 30px;
-}
+
 .contact h5{
   color: #dd6e42;
   font-size: 14pt;
@@ -208,20 +206,20 @@ body{
 }
 
 .thinking-virus {
-  height: 600px;
-  width: 600px;
+  height: 500px;
+  width: 500px;
 }
 
 .faqs{
   color: #f7e1da;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   margin: 0 auto;
 }
 
 
 .faqs .faq {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   padding: 15px;
   background-color: #dd6e42;
   border-radius: 8px;
@@ -274,7 +272,7 @@ body{
   background-color: #dd6e42 ;
   color: #ffffff;
   border: none;
-  
+
 }
 
 .btn:hover{
